head component added

--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -1,4 +1,7 @@
 {
+    "head": {
+        "description": "Appartement a louer à Val Thorens pour 8/10 personnes avec accès direct aux pistes de ski du domaine skiable des 3 Vallées"
+    },
     "navbar": {
         "home": "Acceuil",
         "apartment": "L'Appartement",
