--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,4 +1,7 @@
-{
+{   
+    "head": {
+        "description": "Flat to rent in Val Thorens for 8/10 people with direct access to the slopes of the 3 Vallées ski resort."
+    },
     "navbar": {
         "home": "Home",
         "apartment": "The Apartment",
