contacts page added

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,5 +1,6 @@
 {   
     "head": {
+        "success" : "Success",
         "description": "Flat to rent in Val Thorens for 8/10 people with direct access to the slopes of the 3 Vallées ski resort."
     },
     "navbar": {
