--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,4 +1,5 @@
 {   
+    "alert": "Thank you for contacting us! We will get back to you as soon as possible.",
     "head": {
         "success" : "Success",
         "description": "Flat to rent in Val Thorens for 8/10 people with direct access to the slopes of the 3 Vallées ski resort."
