--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -1,4 +1,5 @@
 {
+    "alert": "Merci de nous avoir contacté! Nous vous répondrons dans les meilleurs délais.",
     "head": {
         "success" : "Succès",
         "description": "Appartement a louer à Val Thorens pour 8/10 personnes avec accès direct aux pistes de ski du domaine skiable des 3 Vallées"
