--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -19,7 +19,7 @@
         "title_home": "We are delighted to offer you the opportunity to rent our 80 square metres (861 square feet) duplex apartment, located on the top floor of the residence “Les Lauzieres”.",
         "page_title_apartment": "The Apartment",
         "title_apartment": "Details & Photos",
-        "page_title_rates": "Rates 2020-2021",
+        "page_title_rates": "Rates 2020 - 2021",
         "title_rates": "Weekly rates with arrival on Saturday and 7 nights minimum stay",
         "page_title_maps": "Maps",
         "title_maps": "Val Thorens",
