--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -9,6 +9,7 @@
         
     },
     "navbar": {
+        "duplex": "Appartement Val Thorens",
         "home": "Acceuil",
         "apartment": "L'Appartement",
         "rates": "Tarifs",
