--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -20,7 +20,7 @@
         "title_home": "We are delighted to offer you the opportunity to rent our 80 square metres (861 square feet) duplex apartment, located on the top floor of the residence “Les Lauzieres”.",
         "page_title_apartment": "The Apartment",
         "title_apartment": "Details & Photos",
-        "page_title_rates": "Rates 2020/2021",
+        "page_title_rates": "Rates 2022 - 2023",
         "title_rates": "Weekly rates with arrival on Saturday and 7 nights minimum stay",
         "page_title_maps": "Maps",
         "title_maps": "Val Thorens",
@@ -92,14 +92,15 @@
         "short_stay": "We offer the possibility for short stays depending on the period and provided that the stay includes a minimumof 2 consecutive nights. Contact us for rates information.",
         "seasons": {
             "season_start": {
-                "season_title": "Start of Season",
-                "months": "20 November to 11 December 2021",
-                "months2": "11 December to 19 December 2021"
+                "season_title": "Beginning of Season",
+                "months": "19 November to 10 December 2022",
+                "months2": "10 December to 17 December 2022",
+                "months3": "17 December to 24 December 2022"
             },
             "christmas": {
                 "season_title": "Christmas & New Year",
-                "months": "19 December to 26 December 2021",
-                "months2": "26 December to 02 January 2022"
+                "months": "24 December to 31 December 2022",
+                "months2": "31 December 2022 to 07 January 2023"
             },
             "season_low": {
                 "season_title": "Low Season",
@@ -108,11 +109,16 @@
             },
             "season_mid": {
                 "season_title": "Mid Season",
-                "months": "22 January to 05 February 2022"
+                "months": "07 January to 21 January 2023",
+                "months2": "21 January to 28 January 2023",
+                "months3": "28 January to 04 February 2023"
             },
             "season_high": {
                 "season_title": "High Season",
-                "months": "05 February to 05 March 2022"
+                "months": "04 February to 11 February 2023",
+                "months2": "11 February to 18 February 2023",
+                "months3": "18 February to 25 February 2023",
+                "months4": "25 February to 04 March 2023"
             },
             "season_mid2": {
                 "season_title": "Mid Season",
@@ -121,7 +127,7 @@
                 "months3": "19 March to 09 April 2022"
             },
             "season_end": {
-                "season_title": "Easter Holidays",
+                "season_title": "Easter 2022",
                 "months": "09 April to 07 May 2022"
             }
         }
