--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -21,7 +21,7 @@
         "title_home": "Nous vous proposons de louer notre grand duplex de 80 mètres carrés, situé au dernier étage de la résidence “Les Lauzieres”.",
         "page_title_apartment": "L'Appartement",
         "title_apartment": "Détails & Photos",
-        "page_title_rates": "Tarifs 2021-2022",
+        "page_title_rates": "Tarifs 2022 - 2023",
         "title_rates": "Tarifs à la semaine avec arrivée le samedi et séjour minimum de 7 nuits",
         "page_title_maps": "Cartes",
         "title_maps": "Val Thorens",
@@ -94,26 +94,32 @@
         "seasons": {
             "season_start": {
                 "season_title": "Début de Saison",
-                "months": "20 Novembre au 11 Décembre 2021",
-                "months2": "11 Décembre au 19 Novembre 2021"
+                "months": "19 Novembre to 10 Décembre 2022",
+                "months2": "10 Décembre to 17 Décembre 2022",
+                "months3": "17 Décembre to 24 Décembre 2022"
             },
             "christmas": {
                 "season_title": "Noël et Nouvel An",
-                "months": "19 Décembre au 26 Décembre 2021",
-                "months2": "26 Décembre au 02 Janvier 2022"
+                "months": "24 Décembre to 31 Décembre 2022",
+                "months2": "31 Décembre 2022 to 07 Janvier 2023"
             },
             "season_low": {
                 "season_title": "Basse Saison",
-                "months": "02 Janvier au 08 Janvier 2022",
-                "months2": "08 Janvier au 22 Janvier 2022"
+                "months": "02 Janvier to 08 Janvier 2022",
+                "months2": "08 Janvier to 22 Janvier 2022"
             },
             "season_mid": {
                 "season_title": "Moyenne Saison",
-                "months": "22 Janvier au 05 Février 2022"
+                "months": "07 Janvier to 21 Janvier 2023",
+                "months2": "21 Janvier to 28 Janvier 2023",
+                "months3": "28 Janvier to 04 February 2023"
             },
             "season_high": {
                 "season_title": "Vacances de Février",
-                "months": "05 Février au 05 Mars 2022"
+                "months": "04 Février to 11 Février 2023",
+                "months2": "11 Février to 18 Février 2023",
+                "months3": "18 Février to 25 Février 2023",
+                "months4": "25 Février to 04 Mars 2023"
             },
             "season_mid2": {
                 "season_title": "Moyenne Saison",
@@ -122,7 +128,7 @@
                 "months3": "19 Mars au 09 Avril 2022"
             },
             "season_end": {
-                "season_title": "Vacances de Pâques",
+                "season_title": "Vacances de Pâques 2022",
                 "months": "09 Avril au 07 Mai 2022"
             }
         }
