--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -99,7 +99,7 @@
                 "months3": "17 Décembre to 24 Décembre 2022"
             },
             "christmas": {
-                "season_title": "Noël et Nouvel An",
+                "season_title": "Noël et Jour de l'An",
                 "months": "24 Décembre to 31 Décembre 2022",
                 "months2": "31 Décembre 2022 to 07 Janvier 2023"
             },
