--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -8,7 +8,7 @@
         "contacts": "Don’t hesitate to contact us for booking requests, or if you need any other information."
     },
     "navbar": {
-        "duplex": "Apartment Val Thorens",
+        "duplex": "Ski accomodation Val Thorens 8 or 10 people",
         "home": "Home",
         "apartment": "The Apartment",
         "rates": "Rates",
