--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -9,7 +9,7 @@
         
     },
     "navbar": {
-        "duplex": "Appartement Val Thorens",
+        "duplex": "Location appartement Val Thorens 8 ou 10 personnes",
         "home": "Acceuil",
         "apartment": "L'Appartement",
         "rates": "Tarifs",
