Adding oven icon

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -55,7 +55,8 @@
             "fridge": "Fridge & Freezer",
             "washing_machine": "Washing Machine & Dryer",
             "dishwasher": "Dishwasher",
-            "microwave": "Microwave/Oven",
+            "microwave": "Microwave",
+            "oven": "Oven",
             "toaster": "Toaster",
             "raclette": "Raclette Grill",
             "foundue": "Fondue Set",
