--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -56,7 +56,8 @@
             "fridge": "Réfrigérateur et Congélateur",
             "washing_machine": "Lave Linge / Sèche-Linge",
             "dishwasher": "Lave-Vaisselle",
-            "microwave": " Four / Micro-Ondes",
+            "microwave": "Micro-Ondes",
+            "oven": "Four",
             "toaster": "Grille-Pain",
             "raclette": "Appareil à Raclette",
             "foundue": "Appareil à Fondue",
