added new rates

--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -115,11 +115,11 @@
             },
             "season_mid": {
                 "season_title": "Moyenne Saison",
-                "months": "04 Janvier au 11 Janvier 2025",
-                "months2": "11 Janvier au 18 Janvier 2025",
-                "months3": "18 Janvier au 25 Janvier 2025",
-                "months4": "25 Janvier au 01 Février 2025",
-                "months5": "01 Février au 08 Février 2025"
+                "months": "03 Janvier au 10 Janvier 2026",
+                "months2": "10 Janvier au 17 Janvier 2026",
+                "months3": "17 Janvier au 24 Janvier 2026",
+                "months4": "24 Janvier au 31 Janvier 2026",
+                "months5": "31 Janvier au 07 Février 2026"
             },
             "season_high": {
                 "season_title": "Vacances de Février",
